remove KO functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="info-box">
         <h1>NEARBY PARKS</h1>
         <div>
-          <input id="searchInAreaText" type="text" placeholder="Enter your favorite area!">
+          <input id="searchInAreaText" data-bind="value: areaInput" type="text" placeholder="Enter your favorite area!">
           <input id="searchInArea" type="button" value="Search">
         </div>
         <div>
