--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
 	<body>
 		<div class="container">
       <div class="info-box">
+			<!--
         <h1>NEARBY PARKS</h1>
         <div>
           <input id="searchInAreaText" type="text" placeholder="Enter your favorite area!">
           <input id="searchInArea" type="button" value="Search">
 					<input id="searchInArea" type="button" value="resetSearch">
         </div>
+			-->
         <div>
 					<div>
+
           <h4 class="inline">Results</h4>
 					<h2 class="inline" id="resultNr" type="text" data-bind="text: arrayLength"></h2>
 				</div>
 						<input id="filter" type="text" placeholder="filter through result" data-bind="textInput: searchTerm, valueUpdate: 'afterkeydown'">
           	<ul data-bind="foreach: filteredList" id="resultList">
-          	<li data-bind="text: name, click: bounce" id="list"></li>
+          	<li data-bind="text: name, click: bounce"></li>
+						<li data-bind="text: currentWeather" id="list"></li>
 				</ul>
           </div>
         </div>
