--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- This is the corresponding "starter code" for 04_Hello Map in Udacity and Google's Maps
-	API Course, Lesson 1 -->
 <html>
 	<head>
 		<link rel="stylesheet" href="css/style.css">
@@ -17,14 +15,14 @@
 			-->
         <div>
 					<div>
-
-          <h4 class="inline">Results</h4>
-					<h2 class="inline" id="resultNr" type="text" data-bind="text: arrayLength"></h2>
+					<h2 class="inline" id="resultNr" type="text" data-bind="text: arrayLength"></h2><h2 class="inline"> Park results in </h2>
+					<h2 data-bind="text: address"></h2>
+					<h4 class="inline" data-bind="text: displayCurrentweather"></h4>
+					<a id="weather" target="_blank" href="http://openweathermap.org/"><p>by openWeathermap</p></a>
 				</div>
-						<input id="filter" type="text" placeholder="filter through result" data-bind="textInput: searchTerm, valueUpdate: 'afterkeydown'">
+						<input id="filter" type="text" placeholder="filter through result" data-bind="textInput: searchItem, valueUpdate: 'afterkeydown'">
           	<ul data-bind="foreach: filteredList" id="resultList">
-          	<li data-bind="text: name, click: bounce"></li>
-						<li data-bind="text: currentWeather" id="list"></li>
+          	<li data-bind="text: name, click: bounce" id="list"></li>
 				</ul>
           </div>
         </div>
