fix foursquare api bugg

--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
 		<meta name="description" content="Natalie Cyreus Udacity Project">
 		<meta name="keywords" content="google-map, parks, education">
 		<meta name="author" content="Natalie Cyreus">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div class="container">
 			<div class="info-box">
 				<div>
-					<h1 class="inline" id="resultNr" type="text" data-bind="text: arrayLength">
-						</h2>
-						<h2 class="inline">
-						Park results in
-					</h1>
 					<h2 data-bind="text: address"></h2>
 					<h4 class="inline" data-bind="text: displayCurrentweather"></h4>
 					<a id="weather" target="_blank" href="http://openweathermap.org/">
-						<p>by openWeathermap</p>
-					</a>
+						<p>by openWeathermap</p></a>
+					<h4 class="inline" id="resultNr" type="text" data-bind="text: arrayLength"></h4>
+
+					<h4 class="inline">Park results</h4>
 				</div>
 				<input id="filter" type="text" placeholder="filter through result" data-bind="textInput: searchItem, valueUpdate: 'afterkeydown'">
 				<ul data-bind="foreach: filteredList" id="resultList">
-					<li data-bind="text: name, click: bounce" id="list"></li>
+					<div id="hover">
+					<li data-bind="text: name, click: bounce" id="list-top" ></li>
+					<h5 data-bind="text: checkInList, click: bounce" id="list">Checkin</h5>
+				</div>
 				</ul>
 			</div>
 			<div id="map"></div>
